--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@babel/plugin-proposal-decorators": "^7.10.1",
 		"@material-ui/core": "^4.10.2",
+		"@material-ui/icons": "^4.9.1",
+		"@material-ui/types": "^5.1.0",
 		"@types/node": "11.13.4",
 		"axios": "^0.19.2",
 		"dotenv": "^8.2.0",
@@ -19,6 +21,7 @@
 		"react-app-rewired": "^2.1.3",
 		"react-dom": "16.8.6",
 		"react-redux": "^7.2.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "2.1.8",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
