#33 Authorization, status and request

--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -5,6 +5,8 @@
       "@view/*": ["./src/view/*"],
       "@store/*": ["./src/store/*"],
       "@sagas/*": ["./src/sagas/*"],
+      "@services/*": ["./src/services/*"],
+      "@types/*": ["./src/types/*"],
     }
   }
 }
