--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"@material-ui/types": "^5.1.0",
 		"@types/node": "11.13.4",
 		"axios": "^0.19.2",
-		"dotenv": "^8.2.0",
+		"password-validator": "^5.0.3",
 		"react": "16.8.6",
 		"react-app-rewire-aliases": "^0.2.0",
 		"react-app-rewired": "^2.1.3",
@@ -26,6 +26,7 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-saga": "^1.1.3",
+		"reselect": "^4.0.0",
 		"styled-components": "4.2.0",
 		"tslint": "^5.20.1",
 		"tslint-react": "^4.0.0",
