--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/types": "^5.1.0",
 		"@types/node": "11.13.4",
+		"@types/react-router-dom": "^5.1.5",
 		"axios": "^0.19.2",
 		"password-validator": "^5.0.3",
 		"react": "16.8.6",
