--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"react": "16.8.6",
 		"react-app-rewire-aliases": "^0.2.0",
 		"react-app-rewired": "^2.1.3",
+		"react-cookie": "^4.0.3",
 		"react-dom": "16.8.6",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
