--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"@types/node": "11.13.4",
 		"@types/react-router-dom": "^5.1.5",
 		"axios": "^0.19.2",
+		"lodash.isequal": "^4.5.0",
 		"password-validator": "^5.0.3",
 		"react": "16.8.6",
 		"react-app-rewire-aliases": "^0.2.0",
