--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
 	},
 	"dependencies": {
 		"@babel/plugin-proposal-decorators": "^7.10.4",
+		"@babel/plugin-proposal-optional-chaining": "^7.10.4",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/types": "^5.1.0",
 		"@types/node": "14.0.14",
 		"@types/react-router-dom": "^5.1.5",
 		"axios": "^0.19.2",
+		"core-js": "^3.6.5",
 		"lodash.isequal": "^4.5.0",
 		"password-validator": "^5.0.3",
 		"react": "16.13.1",
