--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"axios": "^0.19.2",
 		"core-js": "^3.6.5",
 		"lodash.isequal": "^4.5.0",
+		"moment": "^2.27.0",
 		"password-validator": "^5.0.3",
 		"react": "16.13.1",
 		"react-app-rewire-aliases": "^0.2.0",
