--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 		"start": "react-app-rewired start",
 		"build": "react-app-rewired build",
 		"test": "react-app-rewired test",
+		"serve": "serve -s build",
 		"lint:fix": "npm run lint -- --fix",
 		"lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
 	},
