--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"core-js": "^3.6.5",
 		"lodash.isequal": "^4.5.0",
 		"lodash.unionwith": "^4.6.0",
+		"lodash.uniq": "^4.5.0",
 		"lodash.uniqby": "^4.7.0",
 		"moment": "^2.27.0",
 		"password-validator": "^5.0.3",
