--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"lodash.uniqby": "^4.7.0",
 		"moment": "^2.27.0",
 		"password-validator": "^5.0.3",
+		"query-string": "^6.13.1",
 		"react": "16.13.1",
 		"react-app-rewire-aliases": "^0.2.0",
 		"react-app-rewired": "^2.1.6",
