--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"react-autosize-textarea": "^7.1.0",
 		"react-cookie": "^4.0.3",
 		"react-dom": "16.13.1",
+		"react-lazy-load-image-component": "^1.5.0",
 		"react-notify-toast": "^0.5.1",
 		"react-page-scroller": "^2.0.7-beta",
 		"react-redux": "^7.2.0",
