Frontend dockerfile and docker-compose.
Adding SMTP details for central

Adding Minio as a service to the docker-compose

Adding Minio as a service to the docker-compose

--- a/backend/node/Dockerfile
+++ b/backend/node/Dockerfile
@@ -10,7 +10,7 @@ RUN go mod download
 COPY token/*.go ./token/
 COPY common/*.go ./common/
 
-COPY node/ ./node/
+COPY ./node/ ./node/
 
 RUN GOOS=linux GOARCH=amd64 go build -o node-service ./node/cmd/
 
