--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
 		"tslint": "^6.1.2",
 		"tslint-react": "^5.0.0",
 		"typescript": "3.9.6",
-		"uuid": "^8.2.0"
+		"uuid": "^8.2.0",
+		"video-react": "^0.14.1"
 	},
 	"devDependencies": {
 		"@redux-saga/types": "^1.1.0",
