--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"@types/react-router-dom": "^5.1.5",
 		"axios": "^0.19.2",
 		"core-js": "^3.6.5",
+		"dotenv": "^8.2.0",
 		"lodash.isequal": "^4.5.0",
 		"lodash.unionwith": "^4.6.0",
 		"lodash.uniq": "^4.5.0",
