--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           tag: ${{ steps.get_version.outputs.VERSION }}
           registry: docker.io
           directory: ./frontend
-          dockerfile: Dockerfile
+          dockerfile: ./frontend/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
   
@@ -37,8 +37,8 @@ jobs:
           image: k0t0/central
           tag: ${{ steps.get_version.outputs.VERSION }}
           registry: docker.io
-          directory: ./frontend
-          dockerfile: Dockerfile
+          directory: ./backend
+          dockerfile: ./backend/central/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
   
@@ -48,7 +48,7 @@ jobs:
           image: k0t0/node
           tag: ${{ steps.get_version.outputs.VERSION }}
           registry: docker.io
-          directory: ./frontend
-          dockerfile: Dockerfile
+          directory: ./backend
+          dockerfile: ./backend/node/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
