--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           tag: ${{ steps.get_version.outputs.VERSION }}
           registry: docker.io
           directory: ./frontend
-          dockerfile: ./frontend/Dockerfile.development
+          dockerfile: ./frontend/Dockerfile.production
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
   
