--- a/.k8s/node/node.yaml
+++ b/.k8s/node/node.yaml
@@ -35,8 +35,8 @@ spec:
           - name: KOTO_DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: node-secrets
-                key: db_password
+                name: db-node-password
+                key: password
           - name: KOTO_DB_NAME
             value: koto-node-1
           - name: KOTO_S3_ENDPOINT
@@ -66,13 +66,3 @@ spec:
   ports:
   - name: http
     port: 12002
----
-apiVersion: v1
-data:
-  db_password: ZG9ja2Vy
-  s3_key: bWluaW9hZG1pbg==
-  s3_secret: bWluaW9hZG1pbg==
-kind: Secret
-metadata:
-  name: node-secrets
-  namespace: backend
