--- a/.k8s/central/secret-central-smtp.yaml
+++ b/.k8s/central/secret-central-smtp.yaml
@@ -5,5 +5,5 @@ data:
   smtp_user: MjM0MjM0MjM0MjM0MjM=
 kind: Secret
 metadata:
-  name: central-secrets
+  name: central-smtp
   namespace: backend
