--- a/.k8s/db/postgres-central-db.yaml
+++ b/.k8s/db/postgres-central-db.yaml
@@ -3,13 +3,14 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: central-db-pvc
+  namespace: backend
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: do-block-storage
+  storageClassName: standard
 ---
 apiVersion: v1
 kind: Service
