--- a/.k8s/frontend/frontend.yaml
+++ b/.k8s/frontend/frontend.yaml
@@ -15,13 +15,13 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: frontend
-        image: k0t0/frontend:v1.1
+        image: k0t0/frontend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
           - name: KOTO_CENTRAL_HOST
-            value: central-service:12001.backend
+            value: central.koto.at:12001
 ---
 apiVersion: v1
 kind: Service
