--- a/.k8s/central/central.yaml
+++ b/.k8s/central/central.yaml
@@ -19,7 +19,7 @@ spec:
             secretName: central-key
       containers:
       - name: central
-        image: k0t0/central:latest
+        image: k0t0/central:v1.3
         imagePullPolicy: Always
         ports:
         - containerPort: 12001
@@ -86,9 +86,10 @@ kind: Service
 metadata:
   name: central-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: central
   ports:
   - name: http
-    port: 12001
+    port: 80
+    targetPort: 12001
