--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,16 @@ jobs:
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
       
-#      - uses: mr-smithers-excellent/docker-build-push@v4
-#        name: Build & push Frontend Docker image
-#        with:
-#          image: k0t0/frontend
-#          tag: ${{ steps.get_version.outputs.VERSION }}
-#          registry: docker.io
-#          directory: ./frontend
-#          dockerfile: ./frontend/Dockerfile.production
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: mr-smithers-excellent/docker-build-push@v4
+        name: Build & push Frontend Docker image
+        with:
+          image: k0t0/frontend
+          tag: ${{ steps.get_version.outputs.VERSION }}
+          registry: docker.io
+          directory: ./frontend
+          dockerfile: ./frontend/Dockerfile.production
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
   
       - uses: mr-smithers-excellent/docker-build-push@v4
         name: Build & push Backend Central Docker image
