--- a/.k8s/ingress.yaml
+++ b/.k8s/ingress.yaml
@@ -1,9 +1,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: koto-ingress
-  annotations:
-    kubernetes.io/ingress.global-static-ip-name: web-static-ip
+  name: koto-ingress1
 spec:
   rules:
   - host: central.koto.at
@@ -11,13 +9,13 @@ spec:
       paths:
       - backend:
           serviceName: central-service
-          servicePort: 80
+          servicePort: 12001
   - host: node1.koto.at
     http:
       paths:
       - backend:
           serviceName: node-service
-          servicePort: 80
+          servicePort: 12002
   - host: koto.at
     http:
       paths:
