--- a/.k8s/central/central.yaml
+++ b/.k8s/central/central.yaml
@@ -19,7 +19,7 @@ spec:
             secretName: central-key
       containers:
       - name: central
-        image: k0t0/central:v1.3
+        image: k0t0/central:v1.7
         imagePullPolicy: Always
         ports:
         - containerPort: 12001
@@ -65,7 +65,7 @@ spec:
           - name: KOTO_SMTP_HOST
             value: smtp.sendgrid.net
           - name: KOTO_SMTP_PORT
-            value: "465" # TODO
+            value: "587" # TODO
           - name: KOTO_SMTP_USER
             valueFrom:
               secretKeyRef:
@@ -79,7 +79,7 @@ spec:
           - name: KOTO_SMTP_FROM
             value: admin@koto.at
           - name: KOTO_TEST_MODE
-            value: "false"
+            value: "true"
 ---
 apiVersion: v1
 kind: Service
@@ -91,5 +91,4 @@ spec:
     app: central
   ports:
   - name: http
-    port: 80
-    targetPort: 12001
+    port: 12001
