Add docker-compose.yml for the node

--- a/docker/central/.env.template
+++ b/docker/central/.env.template
@@ -1,7 +1,9 @@
 KOTO_ADMINS=
+KOTO_FRONTEND_ADDRESS=
 KOTO_DB_USER=postgres
 KOTO_DB_PASSWORD=docker
 KOTO_S3_ENDPOINT=
+KOTO_S3_REGION=
 KOTO_S3_KEY=
 KOTO_S3_SECRET=
 KOTO_S3_BUCKET=koto-central
