Add docker-compose variables for volumes

--- a/docker/central/.env.template
+++ b/docker/central/.env.template
@@ -12,3 +12,5 @@ KOTO_SMTP_PORT=587
 KOTO_SMTP_USER=
 KOTO_SMTP_PASSWORD=
 KOTO_SMTP_FROM=admin@koto.org
+VOLUME_CENTRAL=./data/central
+VOLUME_DB=./data/db
