--- a/.github/workflows/push-to-prod.yml
+++ b/.github/workflows/push-to-prod.yml
@@ -1,7 +1,11 @@
 name: push to prod
 
-on: workflow_dispatch
-
+on:
+  workflow_dispatch:
+    inputs:
+      goodLuck:
+        description: 'Wish me luch'     
+        required: true
 jobs:
   deploy:
     runs-on: [ubuntu-latest]
