Revert "Update push-to-prod.yml"
This reverts commit c754cbe2b3f744044897425d121528a63e21acd5.

--- a/.github/workflows/push-to-prod.yml
+++ b/.github/workflows/push-to-prod.yml
@@ -1,11 +1,7 @@
 name: push to prod
 
-on:
-  workflow_dispatch:
-    inputs:
-      goodLuck:
-        description: 'Wish me luch'     
-        required: true
+on: workflow_dispatch
+
 jobs:
   deploy:
     runs-on: [ubuntu-latest]
