--- a/.github/workflows/build-publish-push.yml
+++ b/.github/workflows/build-publish-push.yml
@@ -52,3 +52,25 @@ jobs:
           dockerfile: ./backend/node/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Push to central
+        uses: appleboy/ssh-action@master
+        with:
+          host: central.koto.at
+          username: ${{ secrets.CENTRAL_SERVER_USERNAME }}
+          password: ${{ secrets.CENTRAL_SERVER_PASSWORD }}
+          run: |
+            cd koto-central
+            docker-compose pull
+            docker-compose up -d
+            
+      - name: Push to node
+        uses: appleboy/ssh-action@master
+        with:
+          host: node1.koto.at
+          username: ${{ secrets.NODE_SERVER_USERNAME }}
+          password: ${{ secrets.NODE_SERVER_PASSWORD }}
+          run: |
+            cd koto-node
+            docker-compose pull
+            docker-compose up -d
