--- a/docker/node/docker-compose.yml
+++ b/docker/node/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: on-failure
     volumes:
       - ${VOLUME_NODE}:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 12001:12001
     environment:
