--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,10 @@
 		"react-app-rewire-aliases": "^0.2.0",
 		"react-app-rewired": "^2.1.6",
 		"react-autosize-textarea": "^7.1.0",
+		"react-awesome-slider": "^4.1.0",
 		"react-cookie": "^4.0.3",
 		"react-dom": "16.13.1",
 		"react-notify-toast": "^0.5.1",
-		"react-page-scroller": "^2.0.7-beta",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
