--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
 		"react-awesome-slider": "^4.1.0",
 		"react-cookie": "^4.0.3",
 		"react-dom": "16.13.1",
+		"react-markdown": "^4.3.1",
 		"react-notify-toast": "^0.5.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
