--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
 		"react-notify-toast": "^0.5.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
+		"react-router-last-location": "^2.0.1",
 		"react-scripts": "3.4.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
