#104 Added config option for UserHub for new users to autoFriend the hub admin

--- a/backend/user-hub-config.yml.example
+++ b/backend/user-hub-config.yml.example
@@ -2,6 +2,7 @@ address: :12001
 frontend: http://localhost:3000
 admins: andrey9,matt
 test_mode: false
+admin_friendship:
 
 db:
   host: localhost
