--- a/docker/user-hub/.env.template
+++ b/docker/user-hub/.env.template
@@ -14,5 +14,6 @@ KOTO_SMTP_PORT=587
 KOTO_SMTP_USER=
 KOTO_SMTP_PASSWORD=
 KOTO_SMTP_FROM=admin@koto.org
+KOTO_ADMIN_FRIENDSHIP=
 VOLUME_HUB=./data/hub
 VOLUME_DB=./data/db
