--- a/docker/user-hub/docker-compose.yml
+++ b/docker/user-hub/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       KOTO_SMTP_USER: ${KOTO_SMTP_USER}
       KOTO_SMTP_PASSWORD: ${KOTO_SMTP_PASSWORD}
       KOTO_SMTP_FROM: ${KOTO_SMTP_FROM}
+      KOTO_ADMIN_FRIENDSHIP: ${KOTO_ADMIN_FRIENDSHIP}
     depends_on:
       - db
 
