Firebase notification for the user hub

--- a/docker/user-hub/docker-compose.yml
+++ b/docker/user-hub/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       KOTO_SMTP_PASSWORD: ${KOTO_SMTP_PASSWORD}
       KOTO_SMTP_FROM: ${KOTO_SMTP_FROM}
       KOTO_ADMIN_FRIENDSHIP: ${KOTO_ADMIN_FRIENDSHIP}
+      KOTO_FIREBASE_TOKEN: ${KOTO_FIREBASE_TOKEN}
     depends_on:
       - db
 
