--- a/docker/user-hub/.env.template
+++ b/docker/user-hub/.env.template
@@ -15,5 +15,6 @@ KOTO_SMTP_USER=
 KOTO_SMTP_PASSWORD=
 KOTO_SMTP_FROM=admin@koto.org
 KOTO_ADMIN_FRIENDSHIP=
+KOTO_FIREBASE_TOKEN=
 VOLUME_HUB=./data/hub
 VOLUME_DB=./data/db
