Firebase notifications for message hubs

--- a/docker/message-hub/docker-compose.yml
+++ b/docker/message-hub/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       KOTO_LISTEN_ADDRESS: :12001
       KOTO_EXTERNAL_ADDRESS: ${KOTO_EXTERNAL_ADDRESS}
       KOTO_USER_HUB_ADDRESS: ${KOTO_USER_HUB_ADDRESS}
+      KOTO_PRIVATE_KEY: /data/key.rsa
       KOTO_DB_HOST: db
       KOTO_DB_SSL_MODE: disable
       KOTO_DB_USER: ${KOTO_DB_USER}
