--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -1,5 +1,6 @@
 # Project-wide Gradle settings.
-
+org.gradle.daemon=true
+org.gradle.parallel=true
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
