--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,8 @@
 		"react-dom": "16.13.1",
 		"react-markdown": "^4.3.1",
 		"react-notify-toast": "^0.5.1",
+		"react-pinch-and-zoom": "^1.2.5",
+		"react-pull-to-refresh": "^1.1.2",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-last-location": "^2.0.1",
