--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,12 +38,12 @@
 		"react-dom": "16.13.1",
 		"react-markdown": "^4.3.1",
 		"react-notify-toast": "^0.5.1",
-		"react-pinch-and-zoom": "^1.2.5",
 		"react-pull-to-refresh": "^1.1.2",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-last-location": "^2.0.1",
 		"react-scripts": "3.4.1",
+		"react-zoom-pan-pinch": "^1.6.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-saga": "^1.1.3",
