--- a/.github/workflows/build-publish-push.yml
+++ b/.github/workflows/build-publish-push.yml
@@ -1,3 +1,5 @@
+name: build and publish
+
 on:
   push:
     # branches:
@@ -9,11 +11,7 @@ on:
 
 jobs:
   build:
-    name: Build and Publish images
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.get_version.outputs.VERSION }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -55,56 +53,24 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Push to user hub
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: central.koto.at
-      #     username: ${{ secrets.CENTRAL_SERVER_USERNAME }}
-      #     password: ${{ secrets.CENTRAL_SERVER_PASSWORD }}
-      #     script: |
-      #       cd koto-hub
-      #       docker-compose pull
-      #       docker-compose up -d
-
-      # - name: Push to message hub
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: node1.koto.at
-      #     username: ${{ secrets.NODE_SERVER_USERNAME }}
-      #     password: ${{ secrets.NODE_SERVER_PASSWORD }}
-      #     script: |
-      #       cd koto-hub
-      #       docker-compose pull
-      #       docker-compose up -d
-
-  deploy:
-    name: Deploy Application
-    runs-on: ubuntu-latest
-    needs: build
-
-    env:
-      DO_CLUSTER_ID: "b68876cd-8a1d-4073-bb00-0ac36beacc0c"
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      # Install Doctl
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
+      - name: Push to user hub
+        uses: appleboy/ssh-action@master
         with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          host: central.koto.at
+          username: ${{ secrets.CENTRAL_SERVER_USERNAME }}
+          password: ${{ secrets.CENTRAL_SERVER_PASSWORD }}
+          script: |
+            cd koto-hub
+            docker-compose pull
+            docker-compose up -d
 
-      - name: Save DigitalOcean kubeconfig
-        run: doctl kubernetes cluster kubeconfig save ${{ env.DO_CLUSTER_ID }}
-
-
-      - name: Update deployment file
-        run: |
-          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/orbits/backend/user-hub.yaml
-          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/orbits/frontend/frontend.yaml
-
-      - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes
-        run: |
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/orbits/backend/user-hub.yaml
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/orbits/frontend/frontend.yaml
+      - name: Push to message hub
+        uses: appleboy/ssh-action@master
+        with:
+          host: node1.koto.at
+          username: ${{ secrets.NODE_SERVER_USERNAME }}
+          password: ${{ secrets.NODE_SERVER_PASSWORD }}
+          script: |
+            cd koto-hub
+            docker-compose pull
+            docker-compose up -d
