--- a/.k8s/orbits/frontend/frontend.yaml
+++ b/.k8s/orbits/frontend/frontend.yaml
@@ -16,13 +16,13 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: frontend
-        image: k0t0/frontend:<TAG>
+        image: k0t0/frontend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
           - name: KOTO_USER_HUB_ADDRESS
-            value: https://central.orbits.at
+            value: https://central.koto.at
 ---
 apiVersion: v1
 kind: Service
