--- a/.k8s/backend/message-hub.yaml
+++ b/.k8s/backend/message-hub.yaml
@@ -16,7 +16,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: message-hub
-        image: k0t0/node:latest
+        image: k0t0/node:<TAG>
         imagePullPolicy: Always
         ports:
         - containerPort: 12002
